[Feature] Introduce callbacks - early stopping and save best model during finetuning

--- a/category_prediction.ipynb
+++ b/category_prediction.ipynb
@@ -832,7 +832,7 @@
    "source": [
     "# Sequences of tokens and DL\n",
     "\n",
-    "def runDLCrossVal_binary(X, y, max_len, num_words, dim, seed, embedding_matrix, userModel):\n",
+    "def runDLCrossVal_binary(X, y, max_len, num_words, dim, seed, embedding_matrix, userModel, multi):\n",
     "    ############## cross validation\n",
     "    scores=['accuracy', 'precision', 'recall', 'f1', 'roc_auc']\n",
     "    values = [np.array([]) for i in range(0, len(scores))]\n",
@@ -927,7 +927,7 @@
    "outputs": [],
    "source": [
     "if multi == False and representation_form == \"sequences\":\n",
-    "    runDLCrossVal_binary(lines_pad, data[\"Injection\"].values, 512, num_words, dim, seed, embedding_matrix, \"lstm\")"
+    "    runDLCrossVal_binary(lines_pad, data[\"Injection\"].values, 512, num_words, dim, seed, embedding_matrix, \"lstm\", multi)"
    ]
   },
   {
@@ -1077,7 +1077,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def runDLCrossVal_multi(X, y, max_len, num_words, dim, seed, embedding_matrix, userModel):\n",
+    "def runDLCrossVal_multi(X, y, max_len, num_words, dim, seed, embedding_matrix, userModel, multi):\n",
     "    ############## cross validation\n",
     "    scores=['accuracy', 'precision', 'recall', 'f1']\n",
     "    values = [np.array([]) for i in range(0, len(scores))]\n",
@@ -1167,7 +1167,7 @@
    "outputs": [],
    "source": [
     "if multi == True and representation_form == \"sequences\" and train_w2v == False:\n",
-    "    runDLCrossVal_multi(lines_pad, data[\"Category_Index\"].values, 512, num_words, dim, seed, embedding_matrix, \"lstm\")"
+    "    runDLCrossVal_multi(lines_pad, data[\"Category_Index\"].values, 512, num_words, dim, seed, embedding_matrix, \"lstm\", multi)"
    ]
   },
   {
@@ -1438,7 +1438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
