--- a/finetuning_category_prediction.ipynb
+++ b/finetuning_category_prediction.ipynb
@@ -5,16 +5,7 @@
    "execution_count": 1,
    "id": "24ba3160",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\iliaskaloup\\Anaconda3\\envs\\tfgpu\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import json, os\n",
@@ -26,7 +17,7 @@
     "import matplotlib.pyplot as plt\n",
     "import random\n",
     "from tensorflow.keras.callbacks import CSVLogger\n",
-    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "import tensorflow.keras.backend as K\n",
     "from collections import OrderedDict\n",
     "import time\n",
@@ -36,7 +27,6 @@
     "import random\n",
     "\n",
     "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.keras.callbacks import EarlyStopping\n",
     "from tensorflow.keras.initializers import TruncatedNormal\n",
     "from tensorflow.keras.losses import CategoricalCrossentropy\n",
     "from tensorflow.keras.metrics import CategoricalAccuracy\n",
@@ -140,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "eaa5944e",
    "metadata": {},
    "outputs": [
@@ -150,7 +140,7 @@
        "392"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "8e6040f5",
    "metadata": {},
    "outputs": [
@@ -189,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "d13eeb05",
    "metadata": {},
    "outputs": [],
@@ -206,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "7ac1d2a8",
    "metadata": {},
    "outputs": [],
@@ -216,13 +206,14 @@
     "batch_size = 2\n",
     "lr = 5e-05\n",
     "max_len = 512\n",
+    "patience = 5\n",
     "train_len = 4000\n",
     "sequences_data = sequences_data.iloc[0:, :]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "66c653c5",
    "metadata": {},
    "outputs": [],
@@ -265,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "c64a1d1d",
    "metadata": {},
    "outputs": [],
@@ -282,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "66ffd309",
    "metadata": {},
    "outputs": [],
@@ -292,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "afda43c5",
    "metadata": {},
    "outputs": [],
@@ -304,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "af495c86",
    "metadata": {},
    "outputs": [],
@@ -340,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "a183507d",
    "metadata": {},
    "outputs": [],
@@ -352,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "9b22edec",
    "metadata": {},
    "outputs": [],
@@ -369,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "499ff9ac",
    "metadata": {},
    "outputs": [],
@@ -383,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "id": "8afdf7e3",
    "metadata": {},
    "outputs": [],
@@ -400,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "3540490a",
    "metadata": {},
    "outputs": [],
@@ -416,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "f04aafdd",
    "metadata": {},
    "outputs": [],
@@ -439,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "id": "601b8c41",
    "metadata": {},
    "outputs": [],
@@ -564,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "7b444655",
    "metadata": {},
    "outputs": [],
@@ -574,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "id": "2d1281a6",
    "metadata": {},
    "outputs": [
@@ -661,7 +652,7 @@
        "4               0  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "id": "c0d56181",
    "metadata": {},
    "outputs": [],
@@ -709,7 +700,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
+   "id": "41097e94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max length of tokenized data: 512\n",
+      "Row with max length: 3\n",
+      "Max tokenized length 512\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = sequences_data[\"Vulnerability\"].tolist()\n",
+    "\n",
+    "X = tokenizer(\n",
+    "        text=X[0:],\n",
+    "        add_special_tokens=True,\n",
+    "        max_length=max_len,\n",
+    "        truncation=True,\n",
+    "        padding=True,\n",
+    "        return_tensors='tf',\n",
+    "        return_token_type_ids=False,\n",
+    "        return_attention_mask=True,\n",
+    "        verbose=True\n",
+    "    )\n",
+    "\n",
+    "max_len = getMaxLen(X)\n",
+    "print(\"Max tokenized length\", max_len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3470793b",
    "metadata": {},
    "outputs": [
@@ -736,20 +762,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "2035/2035 [==============================] - 537s 258ms/step - loss: 0.9973 - f1_metric: 0.6466 - val_loss: 0.8051 - val_f1_metric: 0.6887\n",
-      "Epoch 2/2\n",
-      "2035/2035 [==============================] - 524s 258ms/step - loss: 0.6758 - f1_metric: 0.7235 - val_loss: 0.7546 - val_f1_metric: 0.7020\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'X_test' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [23], line 75\u001b[0m\n\u001b[0;32m     60\u001b[0m model\u001b[38;5;241m.\u001b[39mcompile(\n\u001b[0;32m     61\u001b[0m     optimizer\u001b[38;5;241m=\u001b[39moptimizer,\n\u001b[0;32m     62\u001b[0m     loss\u001b[38;5;241m=\u001b[39mloss,\n\u001b[0;32m     63\u001b[0m     metrics\u001b[38;5;241m=\u001b[39m[f1_metric]\n\u001b[0;32m     64\u001b[0m )\n\u001b[0;32m     66\u001b[0m history \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mfit(\n\u001b[0;32m     67\u001b[0m     x \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minput_ids\u001b[39m\u001b[38;5;124m'\u001b[39m:X_train_inputs, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mattention_mask\u001b[39m\u001b[38;5;124m'\u001b[39m:X_train_attention},\n\u001b[0;32m     68\u001b[0m     y \u001b[38;5;241m=\u001b[39m to_categorical(Y_train\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mint\u001b[39m)),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     72\u001b[0m     batch_size\u001b[38;5;241m=\u001b[39mbatch_size\n\u001b[0;32m     73\u001b[0m )\n\u001b[1;32m---> 75\u001b[0m predicted \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minput_ids\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[43mX_test\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minput_ids\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mattention_mask\u001b[39m\u001b[38;5;124m'\u001b[39m: X_test[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mattention_mask\u001b[39m\u001b[38;5;124m'\u001b[39m]})\u001b[38;5;241m.\u001b[39mlogits\n\u001b[0;32m     76\u001b[0m predictions \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margmax(predicted, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     78\u001b[0m targets \u001b[38;5;241m=\u001b[39m Y_test\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mint\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'X_test' is not defined"
+      " 458/2035 [=====>........................] - ETA: 6:41 - loss: 1.2286 - f1_metric: 0.5637"
      ]
     }
    ],
@@ -769,7 +782,6 @@
     "        verbose=True\n",
     "    )\n",
     "\n",
-    "#print(\"Max tokenized length\", getMaxLen(X))\n",
     "\n",
     "scores=['accuracy', 'precision', 'recall', 'f1', 'roc_auc']\n",
     "values = [np.array([]) for i in range(0, len(scores))]\n",
@@ -778,8 +790,6 @@
     "f=0\n",
     "kfold = StratifiedKFold(n_splits=k, shuffle=True, random_state=seed)\n",
     "\n",
-    "nb_epoch = 100\n",
-    "BS = 64\n",
     "print(\"Training...\")\n",
     "milli_sec1 = int(round(time.time() * 1000))\n",
     "\n",
@@ -821,15 +831,26 @@
     "        metrics=[f1_metric]\n",
     "    )\n",
     "    \n",
+    "    early_stopping = EarlyStopping(monitor='val_loss', patience=patience)\n",
+    "    model_checkpoint = ModelCheckpoint('./checkpoints/best_weights', monitor='val_loss', save_best_only=True)\n",
+    "    \n",
     "    history = model.fit(\n",
     "        x = {'input_ids':X_train_inputs, 'attention_mask':X_train_attention},\n",
     "        y = to_categorical(Y_train.astype(int)),\n",
     "        validation_data = ({'input_ids':X_test_inputs, 'attention_mask':X_test_attention},\n",
     "                            to_categorical(Y_test.astype(int))),\n",
     "        epochs=n_epochs,\n",
-    "        batch_size=batch_size\n",
+    "        batch_size=batch_size,\n",
+    "        callbacks=[early_stopping, model_checkpoint]\n",
     "    )\n",
     "\n",
+    "    #model.save_weights('./checkpoints/my_checkpoint')\n",
+    "   \n",
+    "    #model = TFAutoModelForSequenceClassification.from_pretrained(model_variation, num_labels=n_categories)\n",
+    "    #model.resize_token_embeddings(len(tokenizer))\n",
+    "    \n",
+    "    model.load_weights('./checkpoints/best_weights')\n",
+    "    \n",
     "    predicted = model.predict({'input_ids': X_test_inputs, 'attention_mask': X_test_attention}).logits\n",
     "    predictions = np.argmax(predicted, axis=1)\n",
     "    \n",
@@ -882,7 +903,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
