Add omission of shuffling of dataset

--- a/finetuning_category_prediction_trainTestSplit.ipynb
+++ b/finetuning_category_prediction_trainTestSplit.ipynb
@@ -88,6 +88,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "87131147",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.sample(frac=1, random_state=seed).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "a021b7be",
    "metadata": {},
