[BugFix] Remove val_f1_metric from early stopping since it reduced the accuracy

--- a/category_prediction_MLP.ipynb
+++ b/category_prediction_MLP.ipynb
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "9cb18819",
+   "id": "396205d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
     "    model.add(Dense(n_outputs))\n",
     "    model.add(Activation('softmax'))\n",
     "    optimizer = optimizers.Adam(learning_rate=0.001)\n",
-    "    model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer, metrics=[f1_metric])\n",
+    "    model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer)\n",
     "    \n",
     "    return model"
    ]
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "4c40edec",
+   "id": "99be2ea0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,14 +686,14 @@
     "    model.add(Dense(n_outputs)) #binary classification\n",
     "    model.add(Activation('softmax'))#Output # sigmoid # softmax\n",
     "    optimizer = optimizers.Adam(learning_rate=0.001) #, epsilon=1e-8, decay=1e-6\n",
-    "    model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer, metrics=[f1_metric]) # 'binary_crossentropy' # \"sparse_categorical_crossentropy\"\n",
+    "    model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer) # 'binary_crossentropy' # \"sparse_categorical_crossentropy\"\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "c732b69f",
+   "id": "a5472fe5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,8 +817,8 @@
     "            \n",
     "        print(\"model summary\\m\", myModel.summary())\n",
     "        csv_logger = CSVLogger('log.csv', append=True, separator=',')\n",
-    "        es = EarlyStopping(monitor='val_f1_metric', mode='max', verbose=1, patience=10)\n",
-    "        mc = ModelCheckpoint('best_model.h5', monitor='val_f1_metric', mode='max', verbose=1, save_best_only=True)\n",
+    "        es = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=10)\n",
+    "        mc = ModelCheckpoint('best_model.h5', monitor='val_loss', mode='min', verbose=1, save_best_only=True)\n",
     "        history = myModel.fit(X_train, Y_train, validation_data=(X_test, Y_test), epochs = nb_epoch, batch_size = BS, shuffle=False, verbose=1, callbacks=[csv_logger,es,mc])\n",
     "        \n",
     "        #load best model\n",
@@ -928,8 +928,8 @@
     "            myModel = buildLstm(max_len, num_words, dim, seed, embedding_matrix, n_categories)\n",
     "        print(\"model summary\\m\",myModel.summary())\n",
     "        csv_logger = CSVLogger('log.csv', append=True, separator=',')\n",
-    "        es = EarlyStopping(monitor='val_f1_metric', mode='max', verbose=1, patience=10)\n",
-    "        mc = ModelCheckpoint('best_model.h5', monitor='val_f1_metric', mode='max', verbose=1, save_best_only=True)\n",
+    "        es = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=10)\n",
+    "        mc = ModelCheckpoint('best_model.h5', monitor='val_loss', mode='min', verbose=1, save_best_only=True)\n",
     "        history = myModel.fit(X_train, Y_train, validation_data=(X_test, Y_test), epochs = nb_epoch, batch_size = BS, shuffle=False, verbose=1, callbacks=[csv_logger,es,mc])\n",
     "        \n",
     "        #load best model\n",
@@ -1833,8 +1833,8 @@
     "            myModel = buildLstm(max_len, num_words, dim, seed, embedding_matrix, n_categories)\n",
     "        print(\"model summary\\m\",myModel.summary())\n",
     "        csv_logger = CSVLogger('log.csv', append=True, separator=',')\n",
-    "        es = EarlyStopping(monitor='val_f1_metric', mode='max', verbose=1, patience=10)\n",
-    "        mc = ModelCheckpoint('best_model.h5', monitor='val_f1_metric', mode='max', verbose=1, save_best_only=True)\n",
+    "        es = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=10)\n",
+    "        mc = ModelCheckpoint('best_model.h5', monitor='val_loss', mode='min', verbose=1, save_best_only=True)\n",
     "        \n",
     "        history = myModel.fit(X_train, Y_train, validation_data=(X_test, Y_test), epochs = nb_epoch, batch_size = BS, shuffle=False, verbose=1, callbacks=[csv_logger,es,mc])\n",
     "        \n",
