--- a/category_prediction_MLP_averagedEmbeddings.ipynb
+++ b/category_prediction_MLP_averagedEmbeddings.ipynb
@@ -529,7 +529,7 @@
     "    model.add(Dense(n_outputs)) #binary classification\n",
     "    model.add(Activation('softmax'))#Output # sigmoid # softmax\n",
     "    optimizer = optimizers.Adam(learning_rate=0.001) #, epsilon=1e-8, decay=1e-6\n",
-    "    model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer, metrics=[f1_metric]) # 'binary_crossentropy' # \"sparse_categorical_crossentropy\"\n",
+    "    model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer) # 'binary_crossentropy' # \"sparse_categorical_crossentropy\"\n",
     "    return model"
    ]
   },
@@ -688,8 +688,8 @@
     "        myModel = buildMLP(X_train.shape[1], n_categories)\n",
     "        print(\"model summary\\m\",myModel.summary())\n",
     "        csv_logger = CSVLogger('log.csv', append=True, separator=',')\n",
-    "        es = EarlyStopping(monitor='val_f1_metric', mode='max', verbose=1, patience=10)\n",
-    "        mc = ModelCheckpoint('best_model.h5', monitor='val_f1_metric', mode='max', verbose=1, save_best_only=True)\n",
+    "        es = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=10)\n",
+    "        mc = ModelCheckpoint('best_model.h5', monitor='val_loss', mode='min', verbose=1, save_best_only=True)\n",
     "        history = myModel.fit(X_train, Y_train, validation_data=(X_test, Y_test), epochs = nb_epoch, batch_size = BS, shuffle=False, verbose=1, callbacks=[csv_logger,es,mc])\n",
     "        \n",
     "        #load best model\n",
@@ -2091,8 +2091,8 @@
     "            myModel = buildLstm(max_len, num_words, dim, seed, embedding_matrix, n_categories)\n",
     "        print(\"model summary\\m\",myModel.summary())\n",
     "        csv_logger = CSVLogger('log.csv', append=True, separator=',')\n",
-    "        es = EarlyStopping(monitor='val_f1_metric', mode='max', verbose=1, patience=10)\n",
-    "        mc = ModelCheckpoint('best_model.h5', monitor='val_f1_metric', mode='max', verbose=1, save_best_only=True)\n",
+    "        es = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=10)\n",
+    "        mc = ModelCheckpoint('best_model.h5', monitor='val_loss', mode='min', verbose=1, save_best_only=True)\n",
     "        \n",
     "        history = myModel.fit(X_train, Y_train, validation_data=(X_test, Y_test), epochs = nb_epoch, batch_size = BS, shuffle=False, verbose=1, callbacks=[csv_logger,es,mc])\n",
     "        \n",
