--- a/finetuning_category_prediction.ipynb
+++ b/finetuning_category_prediction.ipynb
@@ -831,8 +831,8 @@
     "        metrics=[f1_metric]\n",
     "    )\n",
     "    \n",
-    "    early_stopping = EarlyStopping(monitor='val_loss', patience=patience)\n",
-    "    model_checkpoint = ModelCheckpoint('./checkpoints/best_weights', monitor='val_loss', save_best_only=True)\n",
+    "    early_stopping = EarlyStopping(monitor='val_loss', mode='min', patience=patience)\n",
+    "    model_checkpoint = ModelCheckpoint('./checkpoints/best_weights', monitor='val_loss', mode='min', save_best_only=True)\n",
     "    \n",
     "    history = model.fit(\n",
     "        x = {'input_ids':X_train_inputs, 'attention_mask':X_train_attention},\n",
@@ -903,7 +903,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
