--- a/category_prediction_RF_averagedEmbeddings.ipynb
+++ b/category_prediction_RF_averagedEmbeddings.ipynb
@@ -1086,8 +1086,8 @@
     "            myModel = buildLstm(max_len, num_words, dim, seed, embedding_matrix, n_categories)\n",
     "        print(\"model summary\\m\",myModel.summary())\n",
     "        csv_logger = CSVLogger('log.csv', append=True, separator=',')\n",
-    "        es = EarlyStopping(monitor='val_f1_metric', mode='max', verbose=1, patience=10)\n",
-    "        mc = ModelCheckpoint('best_model.h5', monitor='val_f1_metric', mode='max', verbose=1, save_best_only=True)\n",
+    "        es = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=10)\n",
+    "        mc = ModelCheckpoint('best_model.h5', monitor='val_loss', mode='min', verbose=1, save_best_only=True)\n",
     "        \n",
     "        history = myModel.fit(X_train, Y_train, validation_data=(X_test, Y_test), epochs = nb_epoch, batch_size = BS, shuffle=False, verbose=1, callbacks=[csv_logger,es,mc])\n",
     "        \n",
