--- a/finetuning_category_prediction_trainTestSplit.ipynb
+++ b/finetuning_category_prediction_trainTestSplit.ipynb
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87131147",
+   "id": "211df1bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,8 +588,8 @@
     "    metrics=[f1_metric]\n",
     ")\n",
     "\n",
-    "early_stopping = EarlyStopping(monitor='val_f1_metric', mode='max', patience=patience)\n",
-    "model_checkpoint = ModelCheckpoint('./checkpoints/best_weights', monitor='val_f1_metric', mode='max', save_best_only=True)\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', mode='min', patience=patience)\n",
+    "model_checkpoint = ModelCheckpoint('./checkpoints/best_weights', monitor='val_loss', mode='min', save_best_only=True)\n",
     "\n",
     "history = model.fit(\n",
     "    x = {'input_ids':X_train['input_ids'], 'attention_mask':X_train['attention_mask']},\n",
