--- a/trainFastText.ipynb
+++ b/trainFastText.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4f27bdad",
+   "id": "1e9684ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "04beeea7",
+   "id": "fee8525f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7381a117",
+   "id": "d7958ba5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "802c168c",
+   "id": "8b8de07b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e6876e2c",
+   "id": "1bef5702",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
     "    corpusList = corpus.split(\"def\")  # Splitting from 'def'\n",
     "    dataTokenization(corpusList, \"corpus.csv\", comments, strings, numericals, headers)\n",
     "    \n",
-    "    with open(filename+\"_corpus.csv\", newline='', encoding='utf-8') as f:\n",
+    "    with open(\"corpus.csv\", newline='', encoding='utf-8') as f:\n",
     "        reader = csv.reader(x.replace('\\0', '') for x in f)\n",
     "        data = list(reader)\n",
     "    data = dropEmpty(data)\n",
@@ -210,10 +210,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2199167e",
+   "execution_count": 11,
+   "id": "67ebaf0f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'filename' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_48576\\3191206440.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfileEmb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0membVectors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcorpus\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_48576\\1420416715.py\u001b[0m in \u001b[0;36membVectors\u001b[1;34m(dim, method, corpus, comments, strings, numericals, headers)\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mdataTokenization\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcorpusList\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"corpus.csv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcomments\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstrings\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnumericals\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"_corpus.csv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m         \u001b[0mreader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\0'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreader\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'filename' is not defined"
+     ]
+    }
+   ],
    "source": [
     "fileEmb = embVectors(dim, method, corpus, 1, 0, 0, 0)"
    ]
@@ -221,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8963965b",
+   "id": "569d9a95",
    "metadata": {},
    "outputs": [],
    "source": []
