[BugFix] Fix parameters error with fast text training

--- a/trainFastText.ipynb
+++ b/trainFastText.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "1e9684ce",
+   "execution_count": 1,
+   "id": "4ccf4a75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "fee8525f",
+   "execution_count": 2,
+   "id": "31160d2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d7958ba5",
+   "execution_count": 3,
+   "id": "7ddd6de4",
    "metadata": {},
    "outputs": [],
    "source": [
     "dim = 100\n",
-    "method = \"w2v\"\n",
+    "method = \"fast-text\"\n",
     "# read embddings corpus corpus_embeddings\n",
     "with open('py_corpus.txt', 'r', encoding='utf-8') as file:\n",
     "    corpus = file.read()#.lower().replace('\\n', ' ')"
@@ -41,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "8b8de07b",
+   "execution_count": 4,
+   "id": "d517deca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,8 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1bef5702",
+   "execution_count": 15,
+   "id": "3b8f6625",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,15 +192,15 @@
     "    #    pickle.dump(all_words, fp)\n",
     "    \n",
     "    if method == \"w2v\":\n",
-    "        model = Word2Vec(data, size=dim, window=20, workers=4, min_count=1, sg=1)\n",
+    "        model = Word2Vec(data, vector_size=dim, window=20, workers=4, epochs=2, min_count=1, sg=1)\n",
     "        fileEmb = method + '_embeddings.txt'\n",
     "        model.wv.save_word2vec_format(fileEmb, binary=False)\n",
     "    elif method == \"fast-text\":\n",
-    "        model_ted = FastText(size=dim, window=20, min_count=1)\n",
-    "        model_ted.build_vocab(data)\n",
-    "        model_ted.train(sentences=data, epochs=2, sg=1)\n",
-    "        model_ted.save('fasttext.model')\n",
-    "        model_ted = FastText.load('fasttext.model')\n",
+    "        model_ted = FastText(vector_size=dim, window=20, min_count=1)\n",
+    "        model_ted.build_vocab(corpus_iterable=data)\n",
+    "        model_ted.train(corpus_iterable=data, total_examples=len(data), epochs=2)\n",
+    "        #model_ted.save('fasttext.model')\n",
+    "        #model_ted = FastText.load('fasttext.model')\n",
     "        fileEmb = method + '_embeddings.txt'\n",
     "        model_ted.wv.save_word2vec_format(fileEmb, binary=False)\n",
     "    \n",
@@ -210,23 +210,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "67ebaf0f",
+   "execution_count": 16,
+   "id": "5a84e78e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'filename' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_48576\\3191206440.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfileEmb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0membVectors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcorpus\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_48576\\1420416715.py\u001b[0m in \u001b[0;36membVectors\u001b[1;34m(dim, method, corpus, comments, strings, numericals, headers)\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mdataTokenization\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcorpusList\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"corpus.csv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcomments\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstrings\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnumericals\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"_corpus.csv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m         \u001b[0mreader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\0'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreader\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'filename' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fileEmb = embVectors(dim, method, corpus, 1, 0, 0, 0)"
    ]
@@ -234,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "569d9a95",
+   "id": "d32c1cb5",
    "metadata": {},
    "outputs": [],
    "source": []
