Fix evaluation metrics - Instead of micro compute macro average

--- a/category_prediction.ipynb
+++ b/category_prediction.ipynb
@@ -1061,9 +1061,9 @@
     "        predictions = myModel.predict(X_test)\n",
     "        #predScores = myModel.predict_proba(X_test)\n",
     "        accuracy=accuracy_score(Y_test, predictions)\n",
-    "        precision=precision_score(Y_test, predictions, average='micro')\n",
-    "        recall=recall_score(Y_test, predictions, average='micro')\n",
-    "        f1=f1_score(Y_test, predictions, average='micro')\n",
+    "        precision=precision_score(Y_test, predictions, average='macro')\n",
+    "        recall=recall_score(Y_test, predictions, average='macro')\n",
+    "        f1=f1_score(Y_test, predictions, average='macro')\n",
     "        conf_matrix = confusion_matrix(Y_test, predictions)\n",
     "        print(conf_matrix)\n",
     "        #tn, fp, fn, tp = confusion_matrix(Y_test, predictions).ravel()\n",
@@ -1171,9 +1171,9 @@
     "        predScores = myModel.predict(X_test)\n",
     "        predictions = np.argmax(predScores, axis=1)\n",
     "        accuracy=accuracy_score(Y_test, predictions)\n",
-    "        precision=precision_score(Y_test, predictions, average='micro')\n",
-    "        recall=recall_score(Y_test, predictions, average='micro')\n",
-    "        f1=f1_score(Y_test, predictions, average='micro')\n",
+    "        precision=precision_score(Y_test, predictions, average='macro')\n",
+    "        recall=recall_score(Y_test, predictions, average='macro')\n",
+    "        f1=f1_score(Y_test, predictions, average='macro')\n",
     "        conf_matrix = confusion_matrix(Y_test, predictions)\n",
     "        print(conf_matrix)\n",
     "        print(\"Accuracy:%.2f%%\"%(accuracy*100))\n",
@@ -1785,13 +1785,7 @@
       "64/64 [==============================] - 2s 28ms/step - loss: 0.4376 - val_loss: 1.0633\n",
       "\n",
       "Epoch 00023: val_loss did not improve from 0.97474\n",
-      "Epoch 24/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 24/100\n",
       "64/64 [==============================] - 2s 27ms/step - loss: 0.4356 - val_loss: 1.0254 0\n",
       "\n",
       "Epoch 00024: val_loss did not improve from 0.97474\n",
@@ -2193,13 +2187,7 @@
       "64/64 [==============================] - 2s 28ms/step - loss: 1.0749 - val_loss: 1.1067\n",
       "\n",
       "Epoch 00005: val_loss improved from 1.15994 to 1.10670, saving model to best_model.h5\n",
-      "Epoch 6/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 6/100\n",
       "64/64 [==============================] - 2s 27ms/step - loss: 1.0255 - val_loss: 1.0342\n",
       "\n",
       "Epoch 00006: val_loss improved from 1.10670 to 1.03418, saving model to best_model.h5\n",
@@ -2930,9 +2918,9 @@
     "        predScores = myModel.predict(X_test)\n",
     "        predictions = np.argmax(predScores, axis=1)\n",
     "        accuracy=accuracy_score(Y_test, predictions)\n",
-    "        precision=precision_score(Y_test, predictions, average='micro')\n",
-    "        recall=recall_score(Y_test, predictions, average='micro')\n",
-    "        f1=f1_score(Y_test, predictions, average='micro')\n",
+    "        precision=precision_score(Y_test, predictions, average='macro')\n",
+    "        recall=recall_score(Y_test, predictions, average='macro')\n",
+    "        f1=f1_score(Y_test, predictions, average='macro')\n",
     "        conf_matrix = confusion_matrix(Y_test, predictions)\n",
     "        print(conf_matrix)\n",
     "        print(\"Accuracy:%.2f%%\"%(accuracy*100))\n",
