--- a/finetuning_category_prediction_trainTestSplit.ipynb
+++ b/finetuning_category_prediction_trainTestSplit.ipynb
@@ -942,9 +942,9 @@
     "targets = Y_test.astype(int)\n",
     "\n",
     "accuracy=accuracy_score(targets, predictions)\n",
-    "precision=precision_score(targets, predictions, average='micro')\n",
-    "recall=recall_score(targets, predictions, average='micro')\n",
-    "f1=f1_score(targets, predictions, average='micro')\n",
+    "precision=precision_score(targets, predictions, average='macro')\n",
+    "recall=recall_score(targets, predictions, average='macro')\n",
+    "f1=f1_score(targets, predictions, average='macro')\n",
     "conf_matrix = confusion_matrix(targets, predictions)\n",
     "\n",
     "print(\"Confusion Matrix:\\n\", conf_matrix)\n",
@@ -1006,7 +1006,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
