--- a/finetuning_category_prediction_trainTestSplit.ipynb
+++ b/finetuning_category_prediction_trainTestSplit.ipynb
@@ -490,7 +490,7 @@
     "## split dataset to train-test sets\n",
     "### split data into train and test (90% train, 10% test)\n",
     "shuffle_seeders = [5, 10, 15, 20, 25, 30, 35, 40, 45, 50]\n",
-    "shuffle_seeder = shuffle_seeders[9]\n",
+    "shuffle_seeder = shuffle_seeders[1]\n",
     "x_train, x_test, y_train, y_test = train_test_split(sequences_data[\"Vulnerability\"].tolist(), sequences_data[\"Category_Index\"].tolist(), stratify = sequences_data[\"Category_Index\"].tolist(), test_size=0.1, random_state=shuffle_seeder)"
    ]
   },
@@ -557,7 +557,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "509/509 [==============================] - ETA: 0s - loss: 0.9846 - f1_metric: 0.6137"
+      "509/509 [==============================] - ETA: 0s - loss: 0.9481 - f1_metric: 0.6179"
      ]
     },
     {
@@ -585,9 +585,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "509/509 [==============================] - 387s 730ms/step - loss: 0.9846 - f1_metric: 0.6137 - val_loss: 0.6580 - val_f1_metric: 0.7085\n",
+      "509/509 [==============================] - 386s 727ms/step - loss: 0.9481 - f1_metric: 0.6179 - val_loss: 0.6946 - val_f1_metric: 0.6880\n",
       "Epoch 2/100\n",
-      "509/509 [==============================] - ETA: 0s - loss: 0.5599 - f1_metric: 0.7091"
+      "509/509 [==============================] - ETA: 0s - loss: 0.5358 - f1_metric: 0.7191"
      ]
     },
     {
@@ -615,9 +615,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "509/509 [==============================] - 370s 726ms/step - loss: 0.5599 - f1_metric: 0.7091 - val_loss: 0.5541 - val_f1_metric: 0.7053\n",
+      "509/509 [==============================] - 370s 726ms/step - loss: 0.5358 - f1_metric: 0.7191 - val_loss: 0.5580 - val_f1_metric: 0.7062\n",
       "Epoch 3/100\n",
-      "509/509 [==============================] - ETA: 0s - loss: 0.4080 - f1_metric: 0.7443"
+      "509/509 [==============================] - ETA: 0s - loss: 0.3977 - f1_metric: 0.7532"
      ]
     },
     {
@@ -645,9 +645,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "509/509 [==============================] - 368s 723ms/step - loss: 0.4080 - f1_metric: 0.7443 - val_loss: 0.5180 - val_f1_metric: 0.7243\n",
+      "509/509 [==============================] - 372s 731ms/step - loss: 0.3977 - f1_metric: 0.7532 - val_loss: 0.5135 - val_f1_metric: 0.7297\n",
       "Epoch 4/100\n",
-      "509/509 [==============================] - ETA: 0s - loss: 0.3256 - f1_metric: 0.7676"
+      "509/509 [==============================] - ETA: 0s - loss: 0.3329 - f1_metric: 0.7740"
      ]
     },
     {
@@ -675,9 +675,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "509/509 [==============================] - 367s 720ms/step - loss: 0.3256 - f1_metric: 0.7676 - val_loss: 0.5032 - val_f1_metric: 0.7407\n",
+      "509/509 [==============================] - 370s 726ms/step - loss: 0.3329 - f1_metric: 0.7740 - val_loss: 0.4978 - val_f1_metric: 0.7431\n",
       "Epoch 5/100\n",
-      "509/509 [==============================] - ETA: 0s - loss: 0.2817 - f1_metric: 0.7870"
+      "509/509 [==============================] - ETA: 0s - loss: 0.2827 - f1_metric: 0.7881"
      ]
     },
     {
@@ -705,11 +705,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "509/509 [==============================] - 368s 722ms/step - loss: 0.2817 - f1_metric: 0.7870 - val_loss: 0.4820 - val_f1_metric: 0.7606\n",
+      "509/509 [==============================] - 368s 723ms/step - loss: 0.2827 - f1_metric: 0.7881 - val_loss: 0.4968 - val_f1_metric: 0.7487\n",
       "Epoch 6/100\n",
-      "509/509 [==============================] - 344s 677ms/step - loss: 0.2404 - f1_metric: 0.8058 - val_loss: 0.4842 - val_f1_metric: 0.7572\n",
+      "509/509 [==============================] - ETA: 0s - loss: 0.2460 - f1_metric: 0.8058"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Found untraced functions such as encoder_layer_call_fn, encoder_layer_call_and_return_conditional_losses, embeddings_layer_call_fn, embeddings_layer_call_and_return_conditional_losses, dense_layer_call_fn while saving (showing 5 of 422). These functions will not be directly callable after loading.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ./checkpoints\\best_weights\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ./checkpoints\\best_weights\\assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "509/509 [==============================] - 370s 727ms/step - loss: 0.2460 - f1_metric: 0.8058 - val_loss: 0.4721 - val_f1_metric: 0.7623\n",
       "Epoch 7/100\n",
-      "509/509 [==============================] - ETA: 0s - loss: 0.2181 - f1_metric: 0.8102"
+      "509/509 [==============================] - ETA: 0s - loss: 0.2246 - f1_metric: 0.8084"
      ]
     },
     {
@@ -737,39 +765,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "509/509 [==============================] - 368s 722ms/step - loss: 0.2181 - f1_metric: 0.8102 - val_loss: 0.4695 - val_f1_metric: 0.7743\n",
+      "509/509 [==============================] - 369s 724ms/step - loss: 0.2246 - f1_metric: 0.8084 - val_loss: 0.4632 - val_f1_metric: 0.7743\n",
       "Epoch 8/100\n",
-      "509/509 [==============================] - ETA: 0s - loss: 0.1903 - f1_metric: 0.8211"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:Found untraced functions such as encoder_layer_call_fn, encoder_layer_call_and_return_conditional_losses, embeddings_layer_call_fn, embeddings_layer_call_and_return_conditional_losses, dense_layer_call_fn while saving (showing 5 of 422). These functions will not be directly callable after loading.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: ./checkpoints\\best_weights\\assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: ./checkpoints\\best_weights\\assets\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "509/509 [==============================] - 371s 729ms/step - loss: 0.1903 - f1_metric: 0.8211 - val_loss: 0.4662 - val_f1_metric: 0.7723\n",
+      "509/509 [==============================] - 349s 686ms/step - loss: 0.2003 - f1_metric: 0.8224 - val_loss: 0.4634 - val_f1_metric: 0.7799\n",
       "Epoch 9/100\n",
-      "509/509 [==============================] - ETA: 0s - loss: 0.1798 - f1_metric: 0.8263"
+      "509/509 [==============================] - ETA: 0s - loss: 0.1887 - f1_metric: 0.8225"
      ]
     },
     {
@@ -797,108 +797,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "509/509 [==============================] - 374s 734ms/step - loss: 0.1798 - f1_metric: 0.8263 - val_loss: 0.4630 - val_f1_metric: 0.7886\n",
+      "509/509 [==============================] - 371s 729ms/step - loss: 0.1887 - f1_metric: 0.8225 - val_loss: 0.4543 - val_f1_metric: 0.7811\n",
       "Epoch 10/100\n",
-      "509/509 [==============================] - 345s 678ms/step - loss: 0.1626 - f1_metric: 0.8364 - val_loss: 0.4633 - val_f1_metric: 0.7899\n",
+      "509/509 [==============================] - 347s 681ms/step - loss: 0.1717 - f1_metric: 0.8277 - val_loss: 0.4623 - val_f1_metric: 0.7852\n",
       "Epoch 11/100\n",
-      "509/509 [==============================] - ETA: 0s - loss: 0.1503 - f1_metric: 0.8409"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:Found untraced functions such as encoder_layer_call_fn, encoder_layer_call_and_return_conditional_losses, embeddings_layer_call_fn, embeddings_layer_call_and_return_conditional_losses, dense_layer_call_fn while saving (showing 5 of 422). These functions will not be directly callable after loading.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: ./checkpoints\\best_weights\\assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: ./checkpoints\\best_weights\\assets\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "509/509 [==============================] - 371s 728ms/step - loss: 0.1503 - f1_metric: 0.8409 - val_loss: 0.4587 - val_f1_metric: 0.7925\n",
+      "509/509 [==============================] - 347s 681ms/step - loss: 0.1634 - f1_metric: 0.8355 - val_loss: 0.4592 - val_f1_metric: 0.7842\n",
       "Epoch 12/100\n",
-      "509/509 [==============================] - ETA: 0s - loss: 0.1429 - f1_metric: 0.8444"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:Found untraced functions such as encoder_layer_call_fn, encoder_layer_call_and_return_conditional_losses, embeddings_layer_call_fn, embeddings_layer_call_and_return_conditional_losses, dense_layer_call_fn while saving (showing 5 of 422). These functions will not be directly callable after loading.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: ./checkpoints\\best_weights\\assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: ./checkpoints\\best_weights\\assets\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "509/509 [==============================] - 371s 728ms/step - loss: 0.1429 - f1_metric: 0.8444 - val_loss: 0.4530 - val_f1_metric: 0.8002\n",
+      "509/509 [==============================] - 346s 680ms/step - loss: 0.1483 - f1_metric: 0.8407 - val_loss: 0.4571 - val_f1_metric: 0.7931\n",
       "Epoch 13/100\n",
-      "509/509 [==============================] - 346s 680ms/step - loss: 0.1341 - f1_metric: 0.8460 - val_loss: 0.4586 - val_f1_metric: 0.7938\n",
+      "509/509 [==============================] - 345s 679ms/step - loss: 0.1424 - f1_metric: 0.8459 - val_loss: 0.4645 - val_f1_metric: 0.8024\n",
       "Epoch 14/100\n",
-      "509/509 [==============================] - 349s 685ms/step - loss: 0.1306 - f1_metric: 0.8472 - val_loss: 0.4639 - val_f1_metric: 0.7921\n",
-      "Epoch 15/100\n",
-      "509/509 [==============================] - 348s 683ms/step - loss: 0.1175 - f1_metric: 0.8489 - val_loss: 0.4675 - val_f1_metric: 0.7979\n",
-      "Epoch 16/100\n",
-      "509/509 [==============================] - 347s 681ms/step - loss: 0.1101 - f1_metric: 0.8560 - val_loss: 0.4794 - val_f1_metric: 0.7923\n",
-      "Epoch 17/100\n",
-      "509/509 [==============================] - 348s 685ms/step - loss: 0.1032 - f1_metric: 0.8602 - val_loss: 0.4799 - val_f1_metric: 0.7983\n",
-      "15/15 [==============================] - 12s 669ms/step\n",
+      "509/509 [==============================] - 344s 676ms/step - loss: 0.1342 - f1_metric: 0.8460 - val_loss: 0.4650 - val_f1_metric: 0.7902\n",
+      "15/15 [==============================] - 12s 668ms/step\n",
       "Confusion Matrix:\n",
-      " [[132   2   1   0   3   4   1]\n",
-      " [  4  93   1   0   0   0   0]\n",
-      " [  4   4  31   2   0   1   2]\n",
-      " [  2   2   2   8   0   0   1]\n",
-      " [  0   1   1   1  29   1   0]\n",
-      " [  2   2   2   0   0  65   1]\n",
-      " [  0   2   2   0   0   2  42]]\n",
-      "Accuracy:88.30%\n",
-      "Precision:88.30%\n",
-      "Recall:88.30%\n",
-      "F1 score:88.30%\n",
+      " [[128   6   3   1   1   1   3]\n",
+      " [  4  90   1   0   1   1   1]\n",
+      " [  5   2  31   0   1   1   4]\n",
+      " [  1   0   1  12   1   0   0]\n",
+      " [  0   5   0   0  28   0   0]\n",
+      " [  3   0   2   0   3  62   2]\n",
+      " [  1   0   1   0   1   0  45]]\n",
+      "Accuracy:87.42%\n",
+      "Precision:86.33%\n",
+      "Recall:85.22%\n",
+      "F1 score:85.55%\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.92      0.92      0.92       143\n",
-      "           1       0.88      0.95      0.91        98\n",
-      "           2       0.78      0.70      0.74        44\n",
-      "           3       0.73      0.53      0.62        15\n",
-      "           4       0.91      0.88      0.89        33\n",
-      "           5       0.89      0.90      0.90        72\n",
-      "           6       0.89      0.88      0.88        48\n",
+      "           0       0.90      0.90      0.90       143\n",
+      "           1       0.87      0.92      0.90        98\n",
+      "           2       0.79      0.70      0.75        44\n",
+      "           3       0.92      0.80      0.86        15\n",
+      "           4       0.78      0.85      0.81        33\n",
+      "           5       0.95      0.86      0.91        72\n",
+      "           6       0.82      0.94      0.87        48\n",
       "\n",
-      "    accuracy                           0.88       453\n",
-      "   macro avg       0.86      0.82      0.84       453\n",
-      "weighted avg       0.88      0.88      0.88       453\n",
+      "    accuracy                           0.87       453\n",
+      "   macro avg       0.86      0.85      0.86       453\n",
+      "weighted avg       0.88      0.87      0.87       453\n",
       "\n",
-      "Training is completed after 6157203\n"
+      "Training is completed after 5071781\n"
      ]
     }
    ],
@@ -961,32 +899,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "77bcd802",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8521590937407265"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(recall)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3c2f9990",
    "metadata": {},
    "source": [
-    "82.5 86.28 86.95 85.87 85.65 87.42 86.75 86.98 89.85 88.30"
+    "85.43 87.20 86.95 85.87 85.65 87.42 86.75 86.98 89.85 88.30"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "135de81b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "86.655"
+       "87.03999999999999"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(82.5 + 86.28 + 86.95 + 85.87 + 85.65 +87.42 + 86.75 + 86.98 + 89.85 + 88.30)/10"
+    "(85.43 + 87.20 + 86.95 + 85.87 + 85.65 +87.42 + 86.75 + 86.98 + 89.85 + 88.30)/10"
    ]
   }
  ],
@@ -1006,7 +965,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
