Fix vectorizer on BoW, change min_counts on BoW, and try undersampling strategy on BoW

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 5,
    "id": "4d097a14",
    "metadata": {},
    "outputs": [],
@@ -26,15 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "id": "7ce27d93",
    "metadata": {},
    "outputs": [],
    "source": [
-    "seed = 123\n",
-    "np.random.seed(seed)\n",
-    "random.seed(seed)\n",
-    "tf.random.set_seed(seed)"
+    "seed = 123"
    ]
   },
   {
@@ -47,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "id": "1cca5463",
    "metadata": {},
    "outputs": [],
@@ -65,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "id": "33a10512",
    "metadata": {},
    "outputs": [
@@ -100,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "id": "56e34bc4",
    "metadata": {},
    "outputs": [],
@@ -118,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "id": "f868ffb4",
    "metadata": {},
    "outputs": [
@@ -149,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "id": "ae6754de",
    "metadata": {},
    "outputs": [],
@@ -214,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "id": "7852ca33",
    "metadata": {},
    "outputs": [
@@ -255,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "id": "a3aad6b7",
    "metadata": {},
    "outputs": [],
@@ -278,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "id": "8d732a2b",
    "metadata": {},
    "outputs": [
@@ -303,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "id": "10aefd1d",
    "metadata": {},
    "outputs": [
@@ -324,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "id": "3a3e7092",
    "metadata": {},
    "outputs": [
@@ -405,7 +402,7 @@
        "4068          \\t\\t  sql_injection       0"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "id": "e8385988",
    "metadata": {},
    "outputs": [
@@ -462,6 +459,24 @@
     "dataset = dataset.reset_index(drop=True)\n",
     "\n",
     "print(dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ea4c6f2",
+   "metadata": {},
+   "source": [
+    "Save preprocessed dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "02e98e6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.to_csv('preprocessed_data.csv', index=False)"
    ]
   },
   {
